--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -128,6 +128,52 @@
             color: var(--link-hover-color);
         }
 
+        .comments {
+            margin-top: 20px;
+        }
+
+        .comment-card {
+            display: flex;
+            align-items: flex-start;
+            background-color: var(--tag-bg-color);
+            padding: 15px;
+            border-radius: 10px;
+            margin-bottom: 15px;
+            box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
+            transition: transform 0.3s;
+        }
+
+        .comment-card:hover {
+            transform: translateY(-5px);
+        }
+
+        .avatar {
+            flex-shrink: 0;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            margin-right: 15px;
+            background-color: #666;
+            background-size: cover;
+            background-position: center;
+        }
+
+        .comment-content {
+            flex-grow: 1;
+        }
+
+        .comment-author {
+            color: var(--accent-color);
+            font-size: 1.1em;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+
+        .comment-text {
+            color: var(--text-color);
+            line-height: 1.4;
+        }
+
         @media (max-width: 768px) {
             .container {
                 padding: 20px;
@@ -140,69 +186,38 @@
             h2 {
                 font-size: 1.3em;
             }
-
-            button {
-                font-size: 0.9em;
-            }
-
-            a {
-                font-size: 1em;
-            }
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1 th:text="${vtitle}">Video Title</h1>
-
         <div class="thumbnail">
             <img th:src="${vthumb}" alt="Video Thumbnail">
         </div>
-
-        <h2>Tags:</h2>
         <div class="tags">
-            <span class="tag" th:each="tag : ${vtags}" th:text="${tag}">Sample Tag</span>
+            <span th:each="tag : ${vtags}" th:text="${tag}" class="tag">Tag</span>
+        </div>
+        <h2>Description:</h2>
+        <p th:text="${vdesc}">Video Description</p>
+
+        <!-- Comments Section -->
+        <h2>Comments:</h2>
+        <div class="comments">
+            <div th:each="comment : ${vcomments}">
+                <div class="comment-card">
+                    <!-- Avatar -->
+                    <div class="avatar" th:style="'background-image: url(' + ${comment.path('snippet').path('topLevelComment').path('snippet').path('authorProfileImageUrl')} + ')'"></div>
+                    <!-- Comment Content -->
+                    <div class="comment-content">
+                        <p class="comment-author" th:text="${comment.path('snippet').path('topLevelComment').path('snippet').path('authorDisplayName')}">Author Name</p>
+                        <p class="comment-text" th:text="${comment.path('snippet').path('topLevelComment').path('snippet').path('textDisplay')}">Comment Text</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <h2>Description:</h2>
-        <div id="description" th:data-description="${vdesc}"></div>
-
-        <button onclick="copyToClipboard()">Copy Title & Description</button>
-
-        <a href="/">Find New Video Details 🔎</a>
+        <a href="/" class="custom-link">Go back to Home</a>
     </div>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            var descriptionElement = document.getElementById('description');
-            var descriptionText = descriptionElement.getAttribute('data-description');
-
-            function linkify(text) {
-                const urlPattern = /(\b(https?|ftp|file):\/\/[-A-Z0-9+&@#\/%?=~_|$!:,.;]*[-A-Z0-9+&@#\/%=~_|$])/ig;
-                return text.replace(urlPattern, function(url) {
-                    return '<a href="' + url + '" class="custom-link" target="_blank">' + url + '</a>';
-                });
-            }
-
-            var paragraphs = descriptionText.split('➡️');
-
-            descriptionElement.innerHTML = '';
-
-            paragraphs.forEach(function(paragraph) {
-                var p = document.createElement('p');
-                p.innerHTML = linkify(paragraph.trim());
-                descriptionElement.appendChild(p);
-            });
-        });
-
-        function copyToClipboard() {
-            var title = document.querySelector('h1').textContent;
-            var description = Array.from(document.querySelectorAll('#description p')).map(p => p.textContent).join('\n\n');
-            var textToCopy = `Title: ${title}\n\nDescription: ${description}`;
-            navigator.clipboard.writeText(textToCopy).then(() => {
-                alert('Title and Description copied to clipboard!');
-            });
-        }
-    </script>
 </body>
 </html>
